--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&family=Rajdhani:wght@300;400&display=swap"
     rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="movie hub, a place to discover movies and tv series" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport"  content="width=device-width, initial-scale=1.0" />
   <title>CJmovies</title>
 </head>
 
